--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+eframe = { version = "0.23.0" }
+egui = { version = "0.23.0" }
+egui_commonmark = { version = "0.9", default-features = false }
+egui_extras = { version = "0.23.0", features = ["http", "image", "puffin"] }
+env_logger = "0.10"
+log = { version = "0.4.20", features = [] }
