--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,18 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-eframe = { version = "0.23.0" }
-egui = { version = "0.23.0" }
-egui_commonmark = { version = "0.9", default-features = false }
-egui_extras = { version = "0.23.0", features = ["http", "image", "puffin"] }
-env_logger = "0.10"
+eframe = { version = "0.29.1" }
+egui = { version = "0.29.1" }
+egui_commonmark = { version = "0.18.0", default-features = false }
+egui_extras = { version = "0.29.1", features = ["http", "image", "puffin"] }
+env_logger = "0.11.5"
 log = { version = "0.4.20", features = [] }
-arrow = { version = "48.0.0" }
-parquet = { version = "48.0.0" }
+arrow = { version = "53.3.0" }
+parquet = { version = "53.3.0" }
+polars = { version = "0.43.0", features = [
+    "lazy", "streaming", "ndarray", "parquet", "rows", "diagonal_concat",
+    "rolling_window", "polars-io", "sql", "binary_encoding",
+    "dtype-i8", "dtype-i16", "dtype-u8", "dtype-u16"
+] }
+fastrand = "2.0.2"
+chrono = "0.4.38"
